--- a/2a(1).ipynb
+++ b/2a(1).ipynb
@@ -2,7 +2,138 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Team Members:\n",
+    "\n",
+    "# Shubh Almal \n",
+    "# ID: 801365752\n",
+    "\n",
+    "# Saakshi Patel \n",
+    "# ID: 801361041"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2a. How's the covid-19 spread in US? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Block 1: Data Loading and Preprocessing\n",
+    "# The code loads three datasets:\n",
+    "\n",
+    "# df_confirmed_cases: Time series data of confirmed COVID-19 cases in the US.\n",
+    "# df_deaths: Time series data of death cases due to COVID-19 in the US.\n",
+    "# df_vaccinations: Dataset containing COVID-19 vaccination records by state."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load datasets\n",
+    "df_confirmed_cases = pd.read_csv(\"time_series_covid19_confirmed_US.csv\")\n",
+    "df_deaths = pd.read_csv(\"time_series_covid19_deaths_US.csv\")\n",
+    "df_vaccinations = pd.read_csv(\"us_state_vaccinations.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Block 2: Geospatial Visualization of Confirmed Cases\n",
+    "# The code aggregates the confirmed cases data by state and creates a Folium map with markers representing each state. \n",
+    "# The marker size (radius) is scaled based on the total confirmed cases in each state, providing a visual representation of the severity \n",
+    "# of COVID-19 spread across states."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from folium import Map\n",
+    "from folium.plugins import MarkerCluster\n",
+    "\n",
+    "# Preprocess data\n",
+    "df_confirmed_by_state = df_confirmed_cases.groupby(\"Province_State\").sum().reset_index()\n",
+    "\n",
+    "# Create a Folium map\n",
+    "m = Map(location=[37.0902, -95.7129], zoom_start=4)\n",
+    "\n",
+    "# Add markers to the map with radius based on confirmed cases\n",
+    "marker_cluster = MarkerCluster().add_to(m)\n",
+    "for idx, row in df_confirmed_by_state.iterrows():\n",
+    "    state = row[\"Province_State\"]\n",
+    "    cases = row[df_confirmed_cases.columns[11:]].sum()\n",
+    "    radius = min(cases / 10000, 50)\n",
+    "    folium.CircleMarker(location=[row[\"Lat\"], row[\"Long_\"]], radius=radius, color='blue', fill=True).add_to(marker_cluster)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Block 3: Choropleth Map for Total Confirmed Cases\n",
+    "# A choropleth map is created using Folium, coloring the US states based on their total confirmed cases. The color intensity indicates \n",
+    "# the magnitude of confirmed cases in each state, offering a geographical perspective of the pandemic's impact."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import folium\n",
+    "\n",
+    "# Color states based on total number of cases\n",
+    "choropleth = folium.Choropleth(\n",
+    "    geo_data='https://raw.githubusercontent.com/python-visualization/folium/master/examples/data/us-states.json',\n",
+    "    data=df_confirmed_by_state,\n",
+    "    columns=['Province_State', df_confirmed_cases.columns[11]],\n",
+    "    key_on='feature.properties.name',\n",
+    "    fill_color='YlOrRd',\n",
+    "    fill_opacity=0.7,\n",
+    "    line_opacity=0.2,\n",
+    "    legend_name='Total Confirmed Cases'\n",
+    ").add_to(m)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Block 3: Choropleth Map for Total Confirmed Cases\n",
+    "# A choropleth map is created using Folium, coloring the US states based on their total confirmed cases. The color intensity \n",
+    "# indicates the magnitude of confirmed cases in each state, offering a geographical perspective of the pandemic's impact."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -3169,7 +3300,36 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "import plotly.express as px\n",
+    "\n",
+    "# Create line plot for Date vs Number of Confirmed Cases using Plotly\n",
+    "dates = df_confirmed_cases.columns[11:]\n",
+    "confirmed_cases = df_confirmed_cases[dates].sum()\n",
+    "fig = px.line(x=dates, y=confirmed_cases, title='Date vs Number of Confirmed Cases')\n",
+    "fig.update_xaxes(title='Date', tickangle=90)\n",
+    "fig.update_yaxes(title='Number of Confirmed Cases')\n",
+    "fig.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Block 5: Population Trend for Death Cases\n",
+    "# Another line plot using Plotly is created to display the population trend associated with death cases due to COVID-19. \n",
+    "# This visualization helps understand how the population trend relates to the severity of COVID-19 mortality over time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -10735,67 +10895,37 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import folium\n",
-    "from folium.plugins import MarkerCluster\n",
-    "import plotly.express as px\n",
-    "\n",
-    "# Load datasets\n",
-    "df_confirmed_cases = pd.read_csv(\"time_series_covid19_confirmed_US.csv\")\n",
-    "df_deaths = pd.read_csv(\"time_series_covid19_deaths_US.csv\")\n",
-    "df_vaccinations = pd.read_csv(\"us_state_vaccinations.csv\")\n",
-    "\n",
-    "# Preprocess data\n",
-    "# For geospatial visualization, we need to aggregate the confirmed cases by state\n",
-    "df_confirmed_by_state = df_confirmed_cases.groupby(\"Province_State\").sum().reset_index()\n",
-    "\n",
-    "# Calculate population trend for death cases using the \"Population\" column from df_deaths\n",
-    "# Handle non-numeric values when summing the columns\n",
+    "# Calculate population trend for death cases\n",
     "df_deaths_numeric = df_deaths.drop(columns=[\"UID\", \"iso2\", \"iso3\", \"code3\", \"FIPS\", \"Admin2\", \"Province_State\", \"Country_Region\", \"Lat\", \"Long_\", \"Combined_Key\"])\n",
     "df_deaths_numeric = df_deaths_numeric.apply(pd.to_numeric, errors='coerce')\n",
-    "df_deaths_numeric = df_deaths_numeric.fillna(0)  # Replace NaNs with 0\n",
+    "df_deaths_numeric = df_deaths_numeric.fillna(0)\n",
     "df_confirmed_numeric = df_confirmed_cases.drop(columns=[\"UID\", \"iso2\", \"iso3\", \"code3\", \"FIPS\", \"Admin2\", \"Province_State\", \"Country_Region\", \"Lat\", \"Long_\", \"Combined_Key\"])\n",
     "df_confirmed_numeric = df_confirmed_numeric.apply(pd.to_numeric, errors='coerce')\n",
-    "df_confirmed_numeric = df_confirmed_numeric.fillna(0)  # Replace NaNs with 0\n",
+    "df_confirmed_numeric = df_confirmed_numeric.fillna(0)\n",
     "df_deaths[\"Population_trend\"] = df_deaths[\"Population\"] * (df_deaths_numeric.sum(axis=1) / df_confirmed_numeric.sum(axis=1))\n",
-    "\n",
-    "# Create a Folium map\n",
-    "m = folium.Map(location=[37.0902, -95.7129], zoom_start=4)\n",
-    "\n",
-    "# Add markers to the map with radius based on confirmed cases\n",
-    "marker_cluster = MarkerCluster().add_to(m)\n",
-    "for idx, row in df_confirmed_by_state.iterrows():\n",
-    "    state = row[\"Province_State\"]\n",
-    "    cases = row[df_confirmed_cases.columns[11:]].sum()  # Summing confirmed cases from date columns\n",
-    "    radius = min(cases / 10000, 50)  # Scale radius to fit within reasonable bounds\n",
-    "    folium.CircleMarker(location=[row[\"Lat\"], row[\"Long_\"]], radius=radius, color='blue', fill=True).add_to(marker_cluster)\n",
-    "\n",
-    "# Color states based on total number of cases\n",
-    "choropleth = folium.Choropleth(\n",
-    "    geo_data='https://raw.githubusercontent.com/python-visualization/folium/master/examples/data/us-states.json',\n",
-    "    data=df_confirmed_by_state,\n",
-    "    columns=['Province_State', df_confirmed_cases.columns[11]],\n",
-    "    key_on='feature.properties.name',\n",
-    "    fill_color='YlOrRd',\n",
-    "    fill_opacity=0.7,\n",
-    "    line_opacity=0.2,\n",
-    "    legend_name='Total Confirmed Cases'\n",
-    ").add_to(m)\n",
-    "\n",
-    "# Create line plot for Date vs Number of Confirmed Cases using Plotly\n",
-    "dates = df_confirmed_cases.columns[11:]\n",
-    "confirmed_cases = df_confirmed_cases[dates].sum()\n",
-    "fig = px.line(x=dates, y=confirmed_cases, title='Date vs Number of Confirmed Cases')\n",
-    "fig.update_xaxes(title='Date', tickangle=90)\n",
-    "fig.update_yaxes(title='Number of Confirmed Cases')\n",
-    "fig.show()\n",
     "\n",
     "# Create line plot for Population Trend for Death Cases using Plotly\n",
     "fig = px.line(x=df_deaths.index, y=df_deaths[\"Population_trend\"], title='Population Trend for Death Cases')\n",
     "fig.update_xaxes(title='Date', tickangle=90)\n",
     "fig.update_yaxes(title='Population Trend for Death Cases')\n",
-    "fig.show()\n",
-    "\n"
+    "fig.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Conclusion and Insight\n",
+    "# The geospatial visualization (marker cluster map) and choropleth map provide insights into the geographical distribution and \n",
+    "# severity of COVID-19 cases across US states.\n",
+    "\n",
+    "# The line plots show the temporal trends of confirmed cases and death cases, allowing for the analysis of pandemic waves, \n",
+    "# peak periods, and mitigation strategies' effectiveness.\n",
+    "\n",
+    "# The combined visualizations offer a comprehensive understanding of the COVID-19 situation in the US, highlighting hotspots, \n",
+    "# trends, and population impacts related to the pandemic."
    ]
   }
  ],
