--- a/2a(3).ipynb
+++ b/2a(3).ipynb
@@ -2,13 +2,79 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Team Members:\n",
+    "\n",
+    "# Shubh Almal \n",
+    "# ID: 801365752\n",
+    "\n",
+    "# Saakshi Patel \n",
+    "# ID: 801361041"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2a. How's the covid-19 spread in US? "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Block 1: Data Loading\n",
+    "\n",
+    "# This block loads the necessary datasets:\n",
+    "\n",
+    "# df_confirmed_cases: Time series data of confirmed COVID-19 cases in the US.\n",
+    "# df_deaths: Time series data of death cases due to COVID-19 in the US.\n",
+    "# df_vaccinations: Dataset containing COVID-19 vaccination records by state."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load datasets\n",
+    "df_confirmed_cases = pd.read_csv(\"time_series_covid19_confirmed_US.csv\")\n",
+    "df_deaths = pd.read_csv(\"time_series_covid19_deaths_US.csv\")\n",
+    "df_vaccinations = pd.read_csv(\"us_state_vaccinations.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Block 2: Function to Create Interactive Map with Scroller\n",
+    "\n",
+    "# The function create_map generates an interactive Folium map with markers representing different locations.\n",
+    "# It filters locations based on user-defined criteria for minimum and maximum deaths and vaccinations.\n",
+    "# The map updates dynamically as the user adjusts the slider values, providing a customizable and interactive visualization."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "326bd3843e534804a591c84269ab01a8",
+       "model_id": "f5f4af2326f049598164720c28591526",
        "version_major": 2,
        "version_minor": 0
       },
@@ -25,23 +91,14 @@
        "<function __main__.create_map(min_deaths, max_deaths, min_vaccinations, max_vaccinations)>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# MAP CODE WITH SCROLLER\n",
-    "\n",
-    "\n",
-    "import pandas as pd\n",
     "import folium\n",
     "from ipywidgets import interact, widgets\n",
-    "\n",
-    "# Load datasets\n",
-    "df_confirmed_cases = pd.read_csv(\"time_series_covid19_confirmed_US.csv\")\n",
-    "df_deaths = pd.read_csv(\"time_series_covid19_deaths_US.csv\")\n",
-    "df_vaccinations = pd.read_csv(\"us_state_vaccinations.csv\")\n",
     "\n",
     "# Function to create map with markers\n",
     "def create_map(min_deaths, max_deaths, min_vaccinations, max_vaccinations):\n",
@@ -85,6 +142,19 @@
     "         min_vaccinations=widgets.IntSlider(min=min_vaccinations, max=max_vaccinations, step=1000, value=min_vaccinations, description='Min Vaccinations:'),\n",
     "         max_vaccinations=widgets.IntSlider(min=min_vaccinations, max=max_vaccinations, step=1000, value=max_vaccinations, description='Max Vaccinations:')\n",
     "        )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Conclusion and Insight\n",
+    "# The interactive map with a scroller allows users to explore COVID-19 data by adjusting the filter criteria for deaths and \n",
+    "# vaccinations. It provides insights into geographical areas with varying levels of COVID-19 impact, highlighting locations \n",
+    "# with higher mortality rates and vaccination coverage. The dynamic nature of the visualization enhances user engagement and \n",
+    "# facilitates in-depth analysis of COVID-19 trends across different regions."
    ]
   }
  ],
