--- a/2c(1).ipynb
+++ b/2c(1).ipynb
@@ -2,7 +2,115 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Team Members:\n",
+    "\n",
+    "# Shubh Almal \n",
+    "# ID: 801365752\n",
+    "\n",
+    "# Saakshi Patel \n",
+    "# ID: 801361041"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2c. How's the policy of states? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Block 1: Importing Libraries and Setting Directory\n",
+    "\n",
+    "# This block imports the necessary libraries, including pandas for data manipulation, Plotly Express for interactive visualizations, \n",
+    "# and os for directory operations."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "import plotly.express as px"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Block 2: Loading and Processing Policy Data\n",
+    "\n",
+    "# This block sets the directory containing policy files, lists and filters policy files, defines common column names, \n",
+    "# initializes a dictionary for policy counts, reads and processes each policy file, and creates a DataFrame with policy counts."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "directory = 'policy'\n",
+    "\n",
+    "# List all files in the directory\n",
+    "files = os.listdir(directory)\n",
+    "\n",
+    "# Filter out only the files ending with '_policy'\n",
+    "policy_files = [file for file in files if file.endswith('_policy.csv')]\n",
+    "\n",
+    "# Define the common column names\n",
+    "common_columns = ['date', 'policy', 'Restrict/Close', 'Opening (State)', 'Deferring to County', 'Testing', 'Education', 'Health/Medical', 'Emergency Level', 'Transportation', 'Budget', 'Social Distancing', 'Other', 'Vaccine']\n",
+    "\n",
+    "# Initialize a dictionary to store policy counts\n",
+    "policy_counts = {category: 0 for category in common_columns[2:]}\n",
+    "\n",
+    "# Iterate through each policy file\n",
+    "for file in policy_files:\n",
+    "    # Construct the full path to the file\n",
+    "    file_path = os.path.join(directory, file)\n",
+    "    \n",
+    "    # Read the CSV file into a DataFrame\n",
+    "    df = pd.read_csv(file_path, names=common_columns)\n",
+    "    \n",
+    "    # Iterate through each policy category and count occurrences\n",
+    "    for category in common_columns[2:]:\n",
+    "        policy_counts[category] += df[category].count()\n",
+    "\n",
+    "# Convert the policy counts dictionary into a DataFrame\n",
+    "policy_counts_df = pd.DataFrame(list(policy_counts.items()), columns=['Category', 'Count'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Block 3: Creating Sunburst Chart\n",
+    "\n",
+    "# This block uses Plotly Express to create a sunburst chart showing policy counts by category, sets the chart title, \n",
+    "# adjusts layout margins, and displays the chart. \n",
+    "# Hover over the chart to see the policy category and count."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -922,43 +1030,24 @@
     }
    ],
    "source": [
-    "import os\n",
-    "import pandas as pd\n",
-    "import plotly.express as px\n",
-    "\n",
-    "directory = 'C:/Users/Public/Documents/UNCC/2024 SPRING/ITCS 6124 - Illustrative Visualization/Assignments/Project_Communication/IV-Communication-Project/policy'\n",
-    "\n",
-    "# List all files in the directory\n",
-    "files = os.listdir(directory)\n",
-    "\n",
-    "# Filter out only the files ending with '_policy'\n",
-    "policy_files = [file for file in files if file.endswith('_policy.csv')]\n",
-    "\n",
-    "# Define the common column names\n",
-    "common_columns = ['date', 'policy', 'Restrict/Close', 'Opening (State)', 'Deferring to County', 'Testing', 'Education', 'Health/Medical', 'Emergency Level', 'Transportation', 'Budget', 'Social Distancing', 'Other', 'Vaccine']\n",
-    "\n",
-    "# Initialize a dictionary to store policy counts\n",
-    "policy_counts = {category: 0 for category in common_columns[2:]}\n",
-    "\n",
-    "# Iterate through each policy file\n",
-    "for file in policy_files:\n",
-    "    # Construct the full path to the file\n",
-    "    file_path = os.path.join(directory, file)\n",
-    "    \n",
-    "    # Read the CSV file into a DataFrame\n",
-    "    df = pd.read_csv(file_path, names=common_columns)\n",
-    "    \n",
-    "    # Iterate through each policy category and count occurrences\n",
-    "    for category in common_columns[2:]:\n",
-    "        policy_counts[category] += df[category].count()\n",
-    "\n",
-    "# Convert the policy counts dictionary into a DataFrame\n",
-    "policy_counts_df = pd.DataFrame(list(policy_counts.items()), columns=['Category', 'Count'])\n",
-    "\n",
     "# Create a sunburst chart using Plotly\n",
     "fig = px.sunburst(policy_counts_df, path=['Category'], values='Count', title='Policy Counts by Category')\n",
     "fig.update_layout(margin=dict(t=0, l=0, r=0, b=0))\n",
     "fig.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Conclusion and Insight:\n",
+    "\n",
+    "# The visualization presents policy counts across various categories using a sunburst chart, providing an interactive and \n",
+    "# hierarchical view of policy data. Each segment in the sunburst chart represents a policy category, and the size of each segment \n",
+    "# indicates the count of policies within that category. This visualization helps in understanding the distribution and prevalence \n",
+    "# Aof different types of policies, contributing to insights into policy trends and priorities"
    ]
   }
  ],
